# Core sources

src =  [
	'room.hpp'
]

includeDirs = [
  '.',
  '..',
]

compileArgs = [
]

# Core Configuration

  quickerBanDependency = declare_dependency(
  compile_args        : [  compileArgs ],
  include_directories : include_directories(includeDirs),
  sources             : [ src ],
  dependencies        : [  ]
 )
